# StateInfo

./: .gitignore  CMakeLists.txt
include/: StateException.h  TypeToString.h
scripts/: cmakegen-vc14_x64.cmd  cmakegen-vc14_x86.cmd
src/: Main.cpp  StateException.cpp
